# sirf-viewer

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py.
conda_recipe/: conda_dev.md  initial_conda_build.sh  meta.yaml
examples/: basic_usage.py  notebook_example.ipynb
src/sirf_viewer/: __init__.py  gui.py  icons.py  utils.py  viewers.py
src/sirf_viewer/widgets/: __init__.py  acquisition_viewer.py  controls.py  image_viewer.py
tests/: __init__.py  test_sirf_viewer.py
