# setup.cfg
[metadata]
name = sirf-viewer
description = A GUI and Python interface for viewing SIRF ImageData and AcquisitionData
long_description = file: README.md
long_description_content_type = text/markdown
author = SIRF Viewer Team
author_email = sirf-viewer@example.com
url = https://github.com/sirf-viewer/sirf-viewer
project_urls = 
    Documentation = https://sirf-viewer.readthedocs.io
    Source = https://github.com/sirf-viewer/sirf-viewer
    Tracker = https://github.com/sirf-viewer/sirf-viewer/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    matplotlib>=3.3.0
    PyQt5>=5.15.0
    pillow>=8.0.0
    scipy>=1.7.0
    tifffile>=2021.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.0.0
    black>=21.0.0
    flake8>=3.8.0
    mypy>=0.900
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
notebook =
    jupyter>=1.0.0
    ipywidgets>=7.0.0
    ipython>=7.0.0

[options.entry_points]
console_scripts =
    sirf-viewer = sirf_viewer.gui:main